--- a/bb-pilcom/bb-pil-backend/templates/composer.hpp.hbs
+++ b/bb-pilcom/bb-pil-backend/templates/composer.hpp.hbs
@@ -2,16 +2,16 @@
 
 #include "barretenberg/plonk_honk_shared/composer/composer_lib.hpp"
 #include "barretenberg/srs/global_crs.hpp"
-#include "barretenberg/vm/generated/avm_circuit_builder.hpp"
-#include "barretenberg/vm/generated/avm_prover.hpp"
-#include "barretenberg/vm/generated/avm_verifier.hpp"
+#include "barretenberg/vm/generated/{{snakeCase name}}_circuit_builder.hpp"
+#include "barretenberg/vm/generated/{{snakeCase name}}_prover.hpp"
+#include "barretenberg/vm/generated/{{snakeCase name}}_verifier.hpp"
 
 namespace bb {
 
-class AvmComposer {
+class {{name}}Composer {
   public:
-    using Flavor = AvmFlavor;
-    using CircuitConstructor = AvmCircuitBuilder;
+    using Flavor = {{name}}Flavor;
+    using CircuitConstructor = {{name}}CircuitBuilder;
     using ProvingKey = Flavor::ProvingKey;
     using VerificationKey = Flavor::VerificationKey;
     using PCS = Flavor::PCS;
@@ -19,7 +19,7 @@ class AvmComposer {
     using VerifierCommitmentKey = Flavor::VerifierCommitmentKey;
 
     // TODO: which of these will we really need
-    static constexpr std::string_view NAME_STRING = "Avm";
+    static constexpr std::string_view NAME_STRING = "{{name}}";
     static constexpr size_t NUM_RESERVED_GATES = 0;
     static constexpr size_t NUM_WIRES = Flavor::NUM_WIRES;
 
@@ -36,26 +36,26 @@ class AvmComposer {
     bool contains_recursive_proof = false;
     bool computed_witness = false;
 
-    AvmComposer() { crs_factory_ = bb::srs::get_bn254_crs_factory(); }
+    {{name}}Composer() { crs_factory_ = bb::srs::get_bn254_crs_factory(); }
 
-    AvmComposer(std::shared_ptr<ProvingKey> p_key, std::shared_ptr<VerificationKey> v_key)
+    {{name}}Composer(std::shared_ptr<ProvingKey> p_key, std::shared_ptr<VerificationKey> v_key)
         : proving_key(std::move(p_key))
         , verification_key(std::move(v_key))
     {}
 
-    AvmComposer(AvmComposer&& other) noexcept = default;
-    AvmComposer(AvmComposer const& other) noexcept = default;
-    AvmComposer& operator=(AvmComposer&& other) noexcept = default;
-    AvmComposer& operator=(AvmComposer const& other) noexcept = default;
-    ~AvmComposer() = default;
+    {{name}}Composer({{name}}Composer&& other) noexcept = default;
+    {{name}}Composer({{name}}Composer const& other) noexcept = default;
+    {{name}}Composer& operator=({{name}}Composer&& other) noexcept = default;
+    {{name}}Composer& operator=({{name}}Composer const& other) noexcept = default;
+    ~{{name}}Composer() = default;
 
     std::shared_ptr<ProvingKey> compute_proving_key(CircuitConstructor& circuit_constructor);
     std::shared_ptr<VerificationKey> compute_verification_key(CircuitConstructor& circuit_constructor);
 
     void compute_witness(CircuitConstructor& circuit_constructor);
 
-    AvmProver create_prover(CircuitConstructor& circuit_constructor);
-    AvmVerifier create_verifier(CircuitConstructor& circuit_constructor);
+    {{name}}Prover create_prover(CircuitConstructor& circuit_constructor);
+    {{name}}Verifier create_verifier(CircuitConstructor& circuit_constructor);
 
     void add_table_column_selector_poly_to_proving_key(bb::polynomial& small, const std::string& tag);
 
