chore: remove shifts from full row

--- a/bb-pilcom/bb-pil-backend/templates/circuit_builder.hpp.hbs
+++ b/bb-pilcom/bb-pil-backend/templates/circuit_builder.hpp.hbs
@@ -21,7 +21,7 @@ namespace bb {
 
 template <typename FF>
 struct {{name}}FullRow {
-    {{#each all_cols_with_shifts as |col|}}
+    {{#each all_cols as |col|}}
     FF {{col}}{};
     {{/each}}
     
