--- a/bb-pilcom/bb-pil-backend/templates/lookup.hpp.hbs
+++ b/bb-pilcom/bb-pil-backend/templates/lookup.hpp.hbs
@@ -21,45 +21,51 @@ namespace bb {
  * FF>>;)`
  *
  */
-class incl_mem_tag_err_lookup_settings {
+ class {{lookup_name}}_lookup_settings {
   public:
-    static constexpr size_t READ_TERMS = 1;
-    static constexpr size_t WRITE_TERMS = 1;
-    static constexpr size_t READ_TERM_TYPES[READ_TERMS] = { 0 };
-    static constexpr size_t WRITE_TERM_TYPES[WRITE_TERMS] = { 0 };
-    static constexpr size_t LOOKUP_TUPLE_SIZE = 1;
-    static constexpr size_t INVERSE_EXISTS_POLYNOMIAL_DEGREE = 4;
-    static constexpr size_t READ_TERM_DEGREE = 0;
-    static constexpr size_t WRITE_TERM_DEGREE = 0;
+    static constexpr size_t READ_TERMS = {{read_terms}};
+    static constexpr size_t WRITE_TERMS = {{write_terms}};
+    static constexpr size_t READ_TERM_TYPES[READ_TERMS] = {{read_term_types}};
+    static constexpr size_t WRITE_TERM_TYPES[WRITE_TERMS] = {{write_term_types}};
+    static constexpr size_t LOOKUP_TUPLE_SIZE = {{lookup_tuple_size}};
+    static constexpr size_t INVERSE_EXISTS_POLYNOMIAL_DEGREE = {{inverse_degree}};
+    static constexpr size_t READ_TERM_DEGREE = {{read_term_degree}};
+    static constexpr size_t WRITE_TERM_DEGREE = {{write_term_degree}};
 
     template <typename AllEntities> static inline auto inverse_polynomial_is_computed_at_row(const AllEntities& in)
     {
-        return (in.main_tag_err == 1 || in.mem_tag_err == 1);
+        return (in.{{lhs_selector}} == 1 || in.{{rhs_selector}} == 1);
     }
 
     template <typename Accumulator, typename AllEntities>
     static inline auto compute_inverse_exists(const AllEntities& in)
     {
         using View = typename Accumulator::View;
-        const auto is_operation = View(in.main_tag_err);
-        const auto is_table_entry = View(in.mem_tag_err);
+        const auto is_operation = View(in.{{lhs_selector}});
+        const auto is_table_entry = View(in.{{rhs_selector}});
         return (is_operation + is_table_entry - is_operation * is_table_entry);
     }
 
     template <typename AllEntities> static inline auto get_const_entities(const AllEntities& in)
     {
         return std::forward_as_tuple(
-            in.incl_mem_tag_err, in.incl_mem_tag_err_counts, in.main_tag_err, in.mem_tag_err, in.main_clk, in.mem_clk);
+        {{#each lookup_entities as |ent|}}
+        in.{{ent}}{{#unless @last}},{{/unless}}
+        {{/each}}
+        );
     }
 
     template <typename AllEntities> static inline auto get_nonconst_entities(AllEntities& in)
     {
         return std::forward_as_tuple(
-            in.incl_mem_tag_err, in.incl_mem_tag_err_counts, in.main_tag_err, in.mem_tag_err, in.main_clk, in.mem_clk);
+        {{#each lookup_entities as |ent|}}
+        in.{{ent}}{{#unless @last}},{{/unless}}
+        {{/each}}
+        );
     }
 };
 
-template <typename FF_> using incl_mem_tag_err_relation = GenericLookupRelation<incl_mem_tag_err_lookup_settings, FF_>;
-template <typename FF_> using incl_mem_tag_err = GenericLookup<incl_mem_tag_err_lookup_settings, FF_>;
+template <typename FF_> using {{lookup_name}}_relation = GenericLookupRelation<{{lookup_name}}_lookup_settings, FF_>;
+template <typename FF_> using {{lookup_name}} = GenericLookup<{{lookup_name}}_lookup_settings, FF_>;
 
 } // namespace bb
