chore(avm): smaller prover

--- a/bb-pilcom/bb-pil-backend/templates/flavor.hpp.hbs
+++ b/bb-pilcom/bb-pil-backend/templates/flavor.hpp.hbs
@@ -117,7 +117,8 @@ class {{name}}Flavor {
         class WitnessEntities: public WireEntities<DataType>, public DerivedWitnessEntities<DataType> {
             public:
                 DEFINE_COMPOUND_GET_ALL(WireEntities<DataType>, DerivedWitnessEntities<DataType>)
-                auto get_wires() { return WireEntities<DataType>::get_all(); };
+                auto get_wires() { return WireEntities<DataType>::get_all(); }
+                auto get_derived() { return DerivedWitnessEntities<DataType>::get_all(); }
       };
 
       template <typename DataType>
