--- a/bb-pilcom/bb-pil-backend/templates/lookup.hpp.hbs
+++ b/bb-pilcom/bb-pil-backend/templates/lookup.hpp.hbs
@@ -7,21 +7,7 @@
 
 namespace bb {
 
-/**
- * @brief This class contains an example of how to set LookupSettings classes used by the
- * GenericLookupRelationImpl class to specify a scaled lookup
- *
- * @details To create your own lookup:
- * 1) Create a copy of this class and rename it
- * 2) Update all the values with the ones needed for your lookup
- * 3) Update "DECLARE_LOOKUP_IMPLEMENTATIONS_FOR_ALL_SETTINGS" and "DEFINE_LOOKUP_IMPLEMENTATIONS_FOR_ALL_SETTINGS" to
- * include the new settings
- * 4) Add the relation with the chosen settings to Relations in the flavor (for example,"`
- *   using Relations = std::tuple<GenericLookupRelation<ExampleXorLookupSettings,
- * FF>>;)`
- *
- */
- class {{lookup_name}}_lookup_settings {
+class {{lookup_name}}_lookup_settings {
   public:
     static constexpr size_t READ_TERMS = {{read_terms}};
     static constexpr size_t WRITE_TERMS = {{write_terms}};
@@ -65,7 +51,10 @@ namespace bb {
     }
 };
 
-template <typename FF_> using {{lookup_name}}_relation = GenericLookupRelation<{{lookup_name}}_lookup_settings, FF_>;
+template <typename FF_> class {{lookup_name}}_relation : public GenericLookupRelation<{{lookup_name}}_lookup_settings, FF_> {
+    public:
+        static constexpr const char* NAME = "{{lookup_name}}";
+};
 template <typename FF_> using {{lookup_name}} = GenericLookup<{{lookup_name}}_lookup_settings, FF_>;
 
 } // namespace bb
