--- a/bb-pilcom/bb-pil-backend/templates/permutation.hpp.hbs
+++ b/bb-pilcom/bb-pil-backend/templates/permutation.hpp.hbs
@@ -36,8 +36,10 @@ class {{perm_name}}_permutation_settings {
     }
 };
 
-template <typename FF_>
-using {{perm_name}}_relation = GenericPermutationRelation<{{perm_name}}_permutation_settings, FF_>;
+template <typename FF_> class {{perm_name}}_relation : public GenericPermutationRelation<{{perm_name}}_permutation_settings, FF_> {
+    public:
+        static constexpr const char* NAME = "{{perm_name}}";
+};
 template <typename FF_> using {{perm_name}} = GenericPermutation<{{perm_name}}_permutation_settings, FF_>;
 
 } // namespace bb
