--- a/bb-pilcom/bb-pil-backend/templates/flavor.hpp.hbs
+++ b/bb-pilcom/bb-pil-backend/templates/flavor.hpp.hbs
@@ -177,8 +177,8 @@ class {{name}}Flavor {
           --}}
           DEFINE_FLAVOR_MEMBERS(DataType, {{#each all_cols_and_shifts as |item|}}{{#if @index}},{{/if}}{{item}}{{/each}})
 
-          AllConstRefValues({{#each all_cols_and_shifts as |item|}}{{#if @index}},{{/if}}DataType {{item}}{{/each}}) :
-            {{#each all_cols_and_shifts as |item|}}{{item}}({{item}}){{#unless @last}},{{/unless}}{{/each}}
+          AllConstRefValues(const RefArray<FF const, {{len all_cols_and_shifts}}>& il) :
+            {{#each all_cols_and_shifts as |item|}}{{item}}(il[{{@index}}]){{#unless @last}},{{/unless}}{{/each}}
           {}
       };
 
@@ -214,11 +214,22 @@ class {{name}}Flavor {
           */
           [[nodiscard]] AllConstRefValues get_row(size_t row_idx) const
           {
-              return AllConstRefValues(
-                  {{#each fixed as |item|}}{{#if @index}},{{/if}}{{item}}[row_idx]{{/each}},
-                  {{#each witness as |item|}}{{#if @index}},{{/if}}{{item}}[row_idx]{{/each}},
-                  {{#each shifted as |item|}}{{#if @index}},{{/if}}{{item}}[row_idx]{{/each}}
-              );
+              {{!--
+              // TODO: try to make something like this work.
+              // Right now it's too risky because it relies on the order of the columns in `get_all()`.
+              RefArray all_cols = get_all();
+              std::array<const FF*, {{len all_cols_and_shifts}}> refs;
+              for (size_t i = 0; i < refs.size(); ++i) {
+                  refs[i] = &all_cols[i][row_idx];
+              }
+              // Note: the order of the constructor must match the order of the columns in `get_all()`!
+              return AllConstRefValues(refs);
+               --}}
+              return AllConstRefValues(RefArray{
+                {{#each all_cols_and_shifts as |item|}}
+                {{item}}[row_idx]{{#unless @last}},{{/unless}}
+                {{/each}}
+              });
           }
       };
 
