--- a/bb-pilcom/bb-pil-backend/templates/relation.hpp.hbs
+++ b/bb-pilcom/bb-pil-backend/templates/relation.hpp.hbs
@@ -38,12 +38,11 @@ template <typename FF_> class {{name}}Impl {
             [[maybe_unused]] const FF& scaling_factor
         ){
             {{#each identities}}
-            // Contribution {{@index}}
             {
-                {{../root_name}}_DECLARE_VIEWS({{@index}});
+                using Accumulator = typename std::tuple_element_t<{{@index}}, ContainerOverSubrelations>;
                 auto tmp = {{identity}};
                 tmp *= scaling_factor;
-                std::get<{{@index}}>(evals) += tmp;
+                std::get<{{@index}}>(evals) += typename Accumulator::View(tmp);
             }
             {{/each}}
         }
